<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="card1_menu">m1</string>
    <string name="card1_menu_title">How to Care for Orchids</string>
    <string name="card1_menu_content1">With more than 750 genera of orchids, over 30,000 hybrid orchids and more
        new types of orchids every year, there is a wide variety of orchids to choose from for fans
        orchid. Indeed, orchids grow on every continent except Antarctica, so orchid growers can
        choose between the original orchid or the new orchid from a cross, depending on availability
        and environmental compatibility. And when true orchid enthusiasts can (and should) spend a lot of time
        In order to be diligent about reading many books on orchid growing and care, a novice grower needs to be
        starting it another way. In this article, you will learn about the basics of orchid care
        which are usually tough and easy to grow. Once you understand these basics, if you're still passionate
        great for growing orchids more intensively, you can explore more orchid varieties
        challenging when you already have confidence.</string>
    <string name="card1_menu_title1">Method 1: Picking orchids</string>
    <string name="card1_menu_content2"><b>1. Find the right orchid</b>Proper orchid care starts with choosing a suitable plant
        with your particular environment. The orchids discussed in this article are the ones that are recommended to be grown
        indoors because of its adaptability to almost any condition, easy to grow, easy to obtain,
        and the flowers are beautiful.</string>
    <string name="card1_menu_content3">• Will the orchid have enough room when it grows up? Or it needs to be moved
        to another place? Some orchids can grow massively when fully grown and it is best to place them
        in the greenhouse. \n\n
        • Can you meet the temperature requirements that orchids need? Orchids can be divided into three types
        based on temperature requirements –– cold, moderate and warm, which means that orchids need a minimum night temperature
        certain in order to grow successfully. \n\n</string>
    <string name="card1_menu_content4"><b>2. Buy a plant that already flowering</b> Plants that already have flowers
        is a great buy, as orchid seeds can take up to five years to flower.
        You probably don't want to wait that long, unless you are very patient, or already own a greenhouse
        full of orchids.</string>
    <string name="card1_menu_content5"><b>3. Consider growth requirements</b> Choose orchids based on
        growing requirements in your home. This is important because each type of orchid has different needs,
        depending on the origin of the orchid. Always read the label included in the instructions to be sure
        that this plant is suitable for the conditions of your home and garden. The following are some of the common species of orchids
        which usually do well in a home environment:</string>
    <string name="card1_menu_content6"><b>• Phalaenopsis:</b> Commonly referred to as moth orchids, these are orchids
        which is elegant for indoor use. Its long, colorful flower stalks stay fresh for months.
        Flowering starts in winter or early spring. These orchids generally require less light
        than cattleya orchids (see next) and grows well in almost any indoor condition.</string>
    <string name="card1_menu_content7"><b>• Cattleya:</b> This orchid is most easily recognized because of its use in corsages
        and has flowers that can last anywhere from two to six weeks. This orchid usually flowers once a year
        during spring or fall, but requires twice the amount of light than moth orchids to thrive
        well in the house.</string>
    <string name="card1_menu_content8"><b>• Dendrobium:</b> These beautiful orchids give off long, graceful flower stalks
        which is usually white, lavender or a combination of the two, during fall and winter. The flowers can be fixed
        blooms for about three to four weeks, and is one of the easiest plants to care for.</string>
    <string name="card1_menu_content9" tools:ignore="Typos"><b>• Paphiopedilum:</b> The function of the pouch is to trap insects so that they are forced to climb past the staminode, which is behind them
        pollen collected or stored. The leaves are quite attractive with a green or mottled green and white color. This orchid
        requires bright light, but should not be exposed to direct sunlight. At home, it is best placed
        in the shaded east, west or south window (for the northern hemisphere). The leaves should naturally be semi-erect
        and firm, not drooping. Room temperature is ideal for their growth.</string>
    <string name="card1_menu_title2">Method 2 : Watering and Fertilizing</string>
    <string name="card1_menu_content10"><b>1. How to water your orchids.</b> Orchidaceae is a family of flowering plants
        largest, so there are many sub-families, or variations, and they require different watering requirements. Treatment
        which causes one species to dry up posing a drowning risk for another. Generally, water your orchid every time
        five to twelve days, depending on the type of orchid you have, the temperature, and the season --- or more watered in the season
        hot, slightly watered in winter. While a nursery trainer or florist can give you specific information, there is
        a general guide to assist you in determining the best watering method for your orchid:</string>
    <string name="card1_menu_content11">• Keep these varieties evenly moist (not wet) at all times:</string>
    <string name="card1_menu_content12">• Paphiopedilum\n• Miltonia\n• Cymbidium\n• Dontoglossum.</string>
    <string name="card1_menu_content13">• Keep these varieties evenly moist during active growth,
        but leave to dry between waterings if not in active growth:</string>
    <string name="card1_menu_content14">• Cattleya\n• Oncidium\n• Brassia\n• Dendrobium</string>
    <string name="card1_menu_content15">• Keep these varieties nearly dry between waterings:</string>
    <string name="card1_menu_content16">• Phalaenopsis\n• Vanda\n• Ascocenda</string>
    <string name="card1_menu_content17">• Be careful not to wet the leaves when you water your orchid. If the leaves are wet,
        dry gently using a tissue or cotton ball.</string>
    <string name="card1_menu_content18"><b>2. Take care</b> Remove the inner pot from the decorative pot on the outside and place it in the sink
        or bathtub. Add orchid fertilizer to the watering can or container, and water the pot completely. Let the water flow up
        used up before placing it back into its decorative pot. Never let it submerge in water, as it can die.</string>
    <string name="card1_menu_content19">• Note: Epiphytic orchids (grown from branches) are not planted underground like terrestrial orchid varieties
        (grows in the soil), but in coconut shells, bark or cork. Alternatively, they can be grown in styled wicker or wooden baskets
        like a raft. Their roots grow from above, and not below as is commonly found in terrestrial plants.</string>
    <string name="card1_menu_content20"><b>3. Fertilize your orchid.</b> In general, the application is recommended once a month for almost all elements of the fertilizer.
        Look for fertilizers that contain nitrogen (N), phosphorus (P) and potassium (K), plus elements such as iron (Fe). Use a fertilizer with a nitrogen percentage
        when new shoots emerge, and fertilize with more phosphorus and potassium later in season. Don't overdo it deeply
        fertilize the orchid –– this can damage the orchid.</string>
    <string name="card1_menu_content21">• If you are growing orchids on bark, use a fertilizer that is significantly higher in nitrogen
        (with a ratio of 30 (N) -10 (P) -10 (K)). The bacteria in rotting bark will consume a lot of nitrogen. \n\n • Water your orchid
        thoroughly before fertilizing.</string>
    <string name="card1_menu_title3">Method 3 : The siege</string>
    <string name="card1_menu_content22"><b>1. Understand the different needs of terrestrial and epiphytic orchids.</b> Many orchids are epiphytic types
        (grows on trees or branches) and requires a very different growing medium than terrestrial orchids; indeed, orchids usually die when planted
        in the ground if it is not a ground orchid type. Epiphytes have thick fleshy roots that are used to attach themselves to trees or bark
        and to absorb water and nutrients; others have aerial roots that will grow hanging.</string>
    <string name="card1_menu_content23"><b>2. Provide a suitable planting medium for your orchid.</b> Planting media that are commonly used include pine bark,
        coconut husk, sphagnum moss, fern tree fiber, perlite, or a mixture of these. However, the planting medium will depend on the type of orchid –– medium
        planting terrestrial orchids should mostly be from clay with equal parts of materials such as sphagnum moss, wet peat or hard sand.</string>
    <string name="card1_menu_content24">• You can buy a pot that has been given a mixed planting medium for orchids or you can mix the medium yourself
        which contains a mixture of shredded fern fibers, volcanic rock, charcoal, a little peat, pine bark or a combination of these ingredients.</string>
    <string name="card1_menu_content25"><b>3. Change the pot if needed.</b> You need to change the pot every now and then, either to refresh the medium,
        as well as to make room for its growth. Spring is the time usually used to replace potted orchids. Here are a few
        things to consider: </string>
    <string name="title_source_reference">Sources and References</string>
    <string name="title_app_lib">Third party software</string>
    <string name="about_app_dev">Application Developer</string>
    <string name="app_res1">Wikipedia</string>
    <string name="app_res2">WikiHow</string>
    <string name="app_res3">Google</string>
    <string name="app_res4">Stack Overflow</string>
    <string name="app_res5">Android Developers</string>
    <string name="app_res6">Flaticon</string>
    <string name="app_res7">Freepik</string>
    <string name="app_res_type1">Reference Material:</string>
    <string name="app_res_type2">Reference Code:</string>
    <string name="app_res_type3">Reference Image &amp; icon:</string>
    <string name="app_lib1">Picasso</string>
    <string name="app_lib2">Rounded image view</string>
    <string name="app_lib3">Circle image view</string>
    <string name="app_name">Wikidemo</string>
    <string name="app_description">Demo Wiki that discusses about orchids</string>
</resources>