<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    android:layout_gravity="center">
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/CardViewStyle"
        android:layout_gravity="center"
        android:layout_margin="20dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">
            <TextView
                android:id="@+id/txt0_dialog_about_app_res"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="viewStart"
                android:layout_gravity="start"
                android:text="@string/title_source_reference"
                android:textAppearance="@style/dialog_text_title_appearance" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/txt1_dialog_about_app_res"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:layout_gravity="center"
                        android:text="@string/app_res_type1"
                        android:textAppearance="@style/dialog_text_description_small_appearance"/>
                    <android.support.v7.widget.AppCompatButton
                        android:id="@+id/btn1_dialog_about_app_res"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="@string/app_res1"
                        android:layout_gravity="center"
                        android:background="@android:color/transparent"
                        android:foreground="?attr/selectableItemBackground"
                        android:focusable="true"
                        android:clickable="true"
                        android:textAllCaps="false"
                        android:textColor="@color/colorTextVersion"
                        android:textAppearance="@style/dialog_btn_black_appearance" />
                    <android.support.v7.widget.AppCompatButton
                        android:id="@+id/btn2_dialog_about_app_res"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="@string/app_res2"
                        android:layout_gravity="center"
                        android:background="@android:color/transparent"
                        android:foreground="?attr/selectableItemBackground"
                        android:focusable="true"
                        android:clickable="true"
                        android:textAllCaps="false"
                        android:textColor="@color/colorTextVersion"
                        android:textAppearance="@style/dialog_btn_black_appearance"/>
                    <android.support.v7.widget.AppCompatButton
                        android:id="@+id/btn3_dialog_about_app_res"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="@string/app_res3"
                        android:layout_gravity="center"
                        android:background="@android:color/transparent"
                        android:foreground="?attr/selectableItemBackground"
                        android:focusable="true"
                        android:clickable="true"
                        android:textAllCaps="false"
                        android:textColor="@color/colorTextVersion"
                        android:textAppearance="@style/dialog_btn_black_appearance"/>

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/colorBackgroundReference"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"/>

                    <TextView
                        android:id="@+id/txt2_dialog_about_app_res"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:layout_gravity="center"
                        android:text="@string/app_res_type2"
                        android:textAppearance="@style/dialog_text_description_small_appearance"/>
                    <android.support.v7.widget.AppCompatButton
                        android:id="@+id/btn4_dialog_about_app_res"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="@string/app_res4"
                        android:layout_gravity="center"
                        android:background="@android:color/transparent"
                        android:foreground="?attr/selectableItemBackground"
                        android:focusable="true"
                        android:clickable="true"
                        android:textAllCaps="false"
                        android:textColor="@color/colorTextVersion"
                        android:textAppearance="@style/dialog_btn_black_appearance" />
                    <android.support.v7.widget.AppCompatButton
                        android:id="@+id/btn5_dialog_about_app_res"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="@string/app_res5"
                        android:layout_gravity="center"
                        android:background="@android:color/transparent"
                        android:foreground="?attr/selectableItemBackground"
                        android:focusable="true"
                        android:clickable="true"
                        android:textAllCaps="false"
                        android:textColor="@color/colorTextVersion"
                        android:textAppearance="@style/dialog_btn_black_appearance"/>

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/colorBackgroundReference"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"/>

                    <TextView
                        android:id="@+id/txt3_dialog_about_app_res"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:layout_gravity="center"
                        android:text="@string/app_res_type3"
                        android:textAppearance="@style/dialog_text_description_small_appearance"/>
                    <android.support.v7.widget.AppCompatButton
                        android:id="@+id/btn6_dialog_about_app_res"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="@string/app_res6"
                        android:layout_gravity="center"
                        android:background="@android:color/transparent"
                        android:foreground="?attr/selectableItemBackground"
                        android:focusable="true"
                        android:clickable="true"
                        android:textAllCaps="false"
                        android:textColor="@color/colorTextVersion"
                        android:textAppearance="@style/dialog_btn_black_appearance" />
                    <android.support.v7.widget.AppCompatButton
                        android:id="@+id/btn7_dialog_about_app_res"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="@string/app_res7"
                        android:layout_gravity="center"
                        android:background="@android:color/transparent"
                        android:foreground="?attr/selectableItemBackground"
                        android:focusable="true"
                        android:clickable="true"
                        android:textAllCaps="false"
                        android:textColor="@color/colorTextVersion"
                        android:textAppearance="@style/dialog_btn_black_appearance"/>
                </LinearLayout>
            </ScrollView>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</FrameLayout>
