<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    android:layout_gravity="center">
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/CardViewStyle"
        android:layout_gravity="center"
        android:layout_margin="20dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">
            <TextView
                android:id="@+id/txt1_dialog_about_app_lib"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="viewStart"
                android:layout_gravity="start"
                android:text="@string/title_app_lib"
                android:textAppearance="@style/dialog_text_title_appearance" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn1_dialog_about_app_lib"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/app_lib1"
                android:layout_gravity="center"
                android:background="@android:color/transparent"
                android:foreground="?attr/selectableItemBackground"
                android:focusable="true"
                android:clickable="true"
                android:textAllCaps="false"
                android:textColor="@color/colorTextVersion"
                android:textAppearance="@style/dialog_btn_black_appearance"
                android:layout_marginTop="10dp"/>
            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn2_dialog_about_app_lib"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/app_lib2"
                android:layout_gravity="center"
                android:background="@android:color/transparent"
                android:foreground="?attr/selectableItemBackground"
                android:focusable="true"
                android:clickable="true"
                android:textAllCaps="false"
                android:textColor="@color/colorTextVersion"
                android:textAppearance="@style/dialog_btn_black_appearance"/>
            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn3_dialog_about_app_lib"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/app_lib3"
                android:layout_gravity="center"
                android:background="@android:color/transparent"
                android:foreground="?attr/selectableItemBackground"
                android:focusable="true"
                android:clickable="true"
                android:textAllCaps="false"
                android:textColor="@color/colorTextVersion"
                android:textAppearance="@style/dialog_btn_black_appearance"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</FrameLayout>
