<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    android:layout_gravity="center">
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/CardViewStyle"
        android:layout_gravity="center"
        android:layout_margin="20dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center">
                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@mipmap/ic_logo"
                    android:layout_gravity="start|center"
                    tools:ignore="ContentDescription" />
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_gravity="end|center"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp">
                    <TextView
                        android:id="@+id/about_app_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAlignment="viewStart"
                        android:layout_gravity="start"
                        android:text="@string/app_name"
                        android:layout_marginTop="10dp"
                        android:textAppearance="@style/dialog_text_title_appearance"/>
                    <TextView
                        android:id="@+id/about_app_version"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAlignment="viewStart"
                        android:layout_gravity="start"
                        android:textColor="@color/colorTextVersion"
                        android:textSize="15sp"
                        android:textAllCaps="false"/>
                </LinearLayout>
            </LinearLayout>
            <TextView
                android:id="@+id/about_app_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:text="@string/app_description"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:textAppearance="@style/dialog_text_description_small_appearance"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center">
                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/btn_dev"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/about_app_dev"
                    android:textAllCaps="false"
                    android:background="@android:color/transparent"
                    android:layout_gravity="center"
                    android:padding="5dp"
                    android:foreground="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true"
                    android:textColor="@color/colorTextVersion"
                    android:textAppearance="@style/dialog_btn_gray_appearance"/>
                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/btn_source"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_source_reference"
                    android:textAllCaps="false"
                    android:background="@android:color/transparent"
                    android:layout_gravity="center"
                    android:padding="5dp"
                    android:foreground="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true"
                    android:textColor="@color/colorTextVersion"
                    android:textAppearance="@style/dialog_btn_gray_appearance"/>
                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/btn_app_lib"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_app_lib"
                    android:textAllCaps="false"
                    android:background="@android:color/transparent"
                    android:layout_gravity="center"
                    android:padding="5dp"
                    android:foreground="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true"
                    android:textColor="@color/colorTextVersion"
                    android:textAppearance="@style/dialog_btn_gray_appearance"/>
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</FrameLayout>
